--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "nodemon": "^1.15.1"
+  },
+  "dependencies": {
+    "request": "^2.73.0"
   }
 }
