--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^1.15.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "request": "^2.73.0",
     "yargs": "^4.8.1"
   }
